--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: luxjob
-Title: What the Package Does (One Line, Title Case)
+Title: ADEM postgreSQL Database
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+    person("Gilmar", "Steil", , "g.steil@outlook.com", role = c("aut", "cre"))
+Description: Connect to db for backend course (Full stack in R) in DLH - DIgital Learning Hub at Luxembourg.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
@@ -11,3 +11,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 URL: https://github.com/legilm/luxjob
 BugReports: https://github.com/legilm/luxjob/issues
+Imports: 
+    DBI
