--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,4 +12,6 @@ RoxygenNote: 7.3.2
 URL: https://github.com/legilm/luxjob
 BugReports: https://github.com/legilm/luxjob/issues
 Imports: 
-    DBI
+    DBI,
+    RPostgres,
+    glue
